[project]
name = "Auto_Gradient_Boosting"
version = "1.0.0"
authors = [
  { name="Ouedraogo Somkieta Rahim Alex", email="s.r.a.ouedraogo@gmail.com" },
]
description = "Auto Gradient Boosting , is a mathematics API written in Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "Awesome_Linear_Regression",
    'importlib-metadata; python_version<"3.7"',
]

[project.urls]
"Homepage" = "https://github.com/somkietacode/Auto_Gradient_Boosting"
"Bug Tracker" = "https://github.com/somkietacode/Auto_Gradient_Boosting/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
